test(sales): inline validation for channel/campaign metrics (logged)

--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -20,3 +20,126 @@ Command 'pytest' not found, but can be installed with:
 sudo apt install python3-pytest
 [2025-09-29T10:50:55-0600] BLOCKER: pytest missing. Installing minimal test deps (pytest, aiohttp).
 [2025-09-29T10:50:55-0600] Re-running unit tests
+
+==================================== ERRORS ====================================
+______________ ERROR collecting app/assistants/tests/test_api.py _______________
+ImportError while importing test module '/home/justin/llama_rag/app/assistants/tests/test_api.py'.
+Hint: make sure your test modules/packages have valid Python names.
+Traceback:
+/usr/lib/python3.12/importlib/__init__.py:90: in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+app/assistants/tests/test_api.py:10: in <module>
+    from app.assistants.main import (
+E   ModuleNotFoundError: No module named 'app'
+__________________ ERROR collecting scripts/zoho_send_test.py __________________
+ImportError while importing test module '/home/justin/llama_rag/scripts/zoho_send_test.py'.
+Hint: make sure your test modules/packages have valid Python names.
+Traceback:
+/usr/lib/python3.12/importlib/__init__.py:90: in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+scripts/zoho_send_test.py:13: in <module>
+    from app.assistants.main import ZohoOAuthClient, ZohoMailAdapter  # noqa: E402
+    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+E   ImportError: cannot import name 'ZohoOAuthClient' from 'app.assistants.main' (/home/justin/llama_rag/app/assistants/main.py)
+_________________ ERROR collecting test_content_automation.py __________________
+ImportError while importing test module '/home/justin/llama_rag/test_content_automation.py'.
+Hint: make sure your test modules/packages have valid Python names.
+Traceback:
+/usr/lib/python3.12/importlib/__init__.py:90: in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+test_content_automation.py:22: in <module>
+    from app.seo_api.automation.ai_content_generator import AIContentGenerator, ContentType
+E   ModuleNotFoundError: No module named 'app.seo_api'
+__________________ ERROR collecting test_content_optimizer.py __________________
+.venv/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
+    mod = import_path(
+.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
+    importlib.import_module(module_name)
+/usr/lib/python3.12/importlib/__init__.py:90: in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+<frozen importlib._bootstrap>:1387: in _gcd_import
+    ???
+<frozen importlib._bootstrap>:1360: in _find_and_load
+    ???
+<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
+    ???
+<frozen importlib._bootstrap>:935: in _load_unlocked
+    ???
+.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
+    source_stat, co = _rewrite_test(fn, self.config)
+                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
+    tree = ast.parse(source, filename=strfn)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+/usr/lib/python3.12/ast.py:52: in parse
+    return compile(source, filename, mode, flags,
+E     File "/home/justin/llama_rag/test_content_optimizer.py", line 13
+E       from app/seo-api.content_optimizer import ContentOptimizer
+E               ^
+E   SyntaxError: invalid syntax
+_______________ ERROR collecting test_seo_advanced_analytics.py ________________
+ImportError while importing test module '/home/justin/llama_rag/test_seo_advanced_analytics.py'.
+Hint: make sure your test modules/packages have valid Python names.
+Traceback:
+/usr/lib/python3.12/importlib/__init__.py:90: in import_module
+    return _bootstrap._gcd_import(name[level:], package, level)
+           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+test_seo_advanced_analytics.py:10: in <module>
+    from main import SEOAdvancedAnalyticsPlatform
+E   ImportError: cannot import name 'SEOAdvancedAnalyticsPlatform' from 'main' (/home/justin/llama_rag/app/approval-app/main.py)
+=============================== warnings summary ===============================
+app/assistants/main.py:1388
+  /home/justin/llama_rag/app/assistants/main.py:1388: DeprecationWarning: 
+          on_event is deprecated, use lifespan event handlers instead.
+  
+          Read more about it in the
+          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
+          
+    @app.on_event("shutdown")
+
+.venv/lib/python3.12/site-packages/fastapi/applications.py:4523
+.venv/lib/python3.12/site-packages/fastapi/applications.py:4523
+.venv/lib/python3.12/site-packages/fastapi/applications.py:4523
+  /home/justin/llama_rag/.venv/lib/python3.12/site-packages/fastapi/applications.py:4523: DeprecationWarning: 
+          on_event is deprecated, use lifespan event handlers instead.
+  
+          Read more about it in the
+          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
+          
+    return self.router.on_event(event_type)
+
+test_inventory_performance.py:25
+  /home/justin/llama_rag/test_inventory_performance.py:25: PytestCollectionWarning: cannot collect test class 'TestResult' because it has a __init__ constructor (from: test_inventory_performance.py)
+    @dataclass
+
+app/approval-app/main.py:35
+  /home/justin/llama_rag/app/approval-app/main.py:35: DeprecationWarning: 
+          on_event is deprecated, use lifespan event handlers instead.
+  
+          Read more about it in the
+          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
+          
+    @app.on_event("startup")
+
+app/approval-app/main.py:40
+  /home/justin/llama_rag/app/approval-app/main.py:40: DeprecationWarning: 
+          on_event is deprecated, use lifespan event handlers instead.
+  
+          Read more about it in the
+          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
+          
+    @app.on_event("shutdown")
+
+-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
+=========================== short test summary info ============================
+ERROR app/assistants/tests/test_api.py
+ERROR scripts/zoho_send_test.py
+ERROR test_content_automation.py
+ERROR test_content_optimizer.py
+ERROR test_seo_advanced_analytics.py
+!!!!!!!!!!!!!!!!!!! Interrupted: 5 errors during collection !!!!!!!!!!!!!!!!!!!!
+7 warnings, 5 errors in 8.85s
