feat(service-registry): add async health/version poller, CLI, docs

--- a/coordination/inbox/sales/2025-09-29-notes.md
+++ b/coordination/inbox/sales/2025-09-29-notes.md
@@ -351,3 +351,6 @@ index d56f3e07..65b62b87 100644
  create mode 100644 coordination/inbox/tooling/2025-09-29-notes.md
 [2025-09-29T10:51:33-0600] CMD: git add -A && git commit -m 'test(sales): inline validation for channel/campaign metrics (logged)'
 
+[feat/sales-metrics-channel-campaign f7422b5d] test(sales): inline validation for channel/campaign metrics (logged)
+ 5 files changed, 358 insertions(+)
+ create mode 100644 coordination/inbox/quality/2025-09-29-notes.md
