dashboard: compare range param + UI (Polaris Select); tests for resolver

--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -951,3 +951,7 @@ ERROR: file or directory not found: app/tests/test_retry_dlq.py
 
 no tests ran in 0.00s
 [2025-09-29T11:27:19-0600] Commit reliability module and docs
+[feat/sales-metrics-channel-campaign 5ed8e614] feat(reliability): add async retry with backoff and JSONL DLQ; tests; docs
+ 18 files changed, 13920 insertions(+), 12 deletions(-)
+ create mode 100644 license-check-report.json
+ create mode 100755 tools/security/security-scan.sh
