--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -1501,3 +1501,6 @@ Mon Sep 29 12:17:49 MDT 2025: MCP: Completed idempotent handlers implementation
 MCP: Starting remaining components
 Mon Sep 29 12:42:34 MDT 2025: MCP: Starting OAuth secrets rotation and vault integration
 Mon Sep 29 12:47:12 MDT 2025: MCP: Completed OAuth secrets rotation, vault integration, and rate limiting
+MCP: Adding rate limiting
+Mon Sep 29 12:48:14 MDT 2025: MCP: Starting traces/metrics/logs correlation (OTel) implementation
+Mon Sep 29 12:51:54 MDT 2025: MCP: Completed traces/metrics/logs correlation (OTel) implementation
