--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -1504,3 +1504,5 @@ Mon Sep 29 12:47:12 MDT 2025: MCP: Completed OAuth secrets rotation, vault integ
 MCP: Adding rate limiting
 Mon Sep 29 12:48:14 MDT 2025: MCP: Starting traces/metrics/logs correlation (OTel) implementation
 Mon Sep 29 12:51:54 MDT 2025: MCP: Completed traces/metrics/logs correlation (OTel) implementation
+MCP: Starting remaining and enhancements
+Mon Sep 29 12:58:24 MDT 2025: MCP: Starting contract tests against mocks implementation
