--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -1506,3 +1506,5 @@ Mon Sep 29 12:48:14 MDT 2025: MCP: Starting traces/metrics/logs correlation (OTe
 Mon Sep 29 12:51:54 MDT 2025: MCP: Completed traces/metrics/logs correlation (OTel) implementation
 MCP: Starting remaining and enhancements
 Mon Sep 29 12:58:24 MDT 2025: MCP: Starting contract tests against mocks implementation
+Mon Sep 29 13:02:44 MDT 2025: MCP: Completed contract tests against mocks implementation
+Mon Sep 29 13:52:56 MDT 2025: MCP: Starting backfill/replay tooling with guardrails implementation
