--- a/coordination/inbox/mcp/2025-09-29-notes.md
+++ b/coordination/inbox/mcp/2025-09-29-notes.md
@@ -1508,3 +1508,5 @@ MCP: Starting remaining and enhancements
 Mon Sep 29 12:58:24 MDT 2025: MCP: Starting contract tests against mocks implementation
 Mon Sep 29 13:02:44 MDT 2025: MCP: Completed contract tests against mocks implementation
 Mon Sep 29 13:52:56 MDT 2025: MCP: Starting backfill/replay tooling with guardrails implementation
+Mon Sep 29 13:58:04 MDT 2025: MCP: Completed backfill/replay tooling with guardrails implementation
+Mon Sep 29 14:02:25 MDT 2025: MCP: Starting canary deploy and traffic shifting implementation
